--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Hello there..!! Chandan here ..<a href="https://codeSTACK25.github.io">codeSTACK25</a></header>
+    <header>Hello there..!! Chandan here ..<a href="https://codestack25.github.io/">codeSTACK25</a></header>
     <h1>Lets starts the journey here..</h1>
 </body>
 </html>
